Adição de imagens na tela de sobre

--- a/N2B1_CadCurriculos/Views/Curriculo/Sobre.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Sobre.cshtml
@@ -3,11 +3,22 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Desenvolvedores</p>
+<p><h1>Desenvolvedores</h1></p>
 <br />
-<h3>Gustavo Pepinelli Salgado  </h3>
+<body>
+<img src="/img/gustavo.jpg" width="70" height="70">
+<h3>Gustavo Pepinelli Salgado</h3> 
+<h5>RA: 081190006</h5>
 <br />
-<h3>Márcio Rios Kunimura </h3>
 <br />
-<h3>Rodrigo Kawaura Montemor</h3>
+<img src="/img/marcio.png" width="70" height="70">
+<h3>Márcio Rios Kunimura</h3> 
+<h5>RA: 081200041</h5>
 <br />
+<br />
+<img src="/img/rodrigo.png" alt="foto do rod" width="70" height="70">
+<h3>Rodrigo Kawaura Montemor </h3> 
+<h5>RA: 081190012</h5>
+<br />
+<br />
+    </body>
