Modifiquei as views

--- a/N2B1_CadCurriculos/Views/Curriculo/Index.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Index.cshtml
@@ -1,13 +1,36 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+
+
 <body>
-<header>
-    <nav>
-        <ul>
-            <li><a asp-area="" asp-controller="Curriculo" asp-action="Sobre">Sobre</a></li>
-            <li><a asp-area="" asp-controller="Curriculo" asp-action="Cadastro">Cadastrar Currículo</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <h1>Gerenciador de Curriculos</h1>
+
+        <nav>
+            <ul>
+                <li><a asp-area="" asp-controller="Curriculo" asp-action="Sobre">Sobre</a></li>
+                <li><a asp-area="" asp-controller="Curriculo" asp-action="Cadastro">Cadastrar Currículo</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h2>Curriculos cadastrados</h2>
+
+        <table>
+            <tr>
+                <th>CPF</th>
+                <th>Nome</th>
+                <th>CEP</th>
+                <th>Rua</th>
+            </tr>
+            <tr>
+                <td>CPF_valor</td>
+                <td>Nome_valor</td>
+                <td>CEP_valor</td>
+                <td>Rua_valor</td>
+            </tr>
+        </table>
+    </main>
 </body>
