--- a/N2B1_CadCurriculos/Views/Curriculo/Sobre.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Sobre.cshtml
@@ -1,24 +1,29 @@
 ﻿@{
     ViewData["Title"] = "Sobre";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p><h1>Desenvolvedores</h1></p>
-<br />
 <body>
-<img src="/img/gustavo.jpg" width="70" height="70">
-<h3>Gustavo Pepinelli Salgado</h3> 
-<h5>RA: 081190006</h5>
-<br />
-<br />
-<img src="/img/marcio.png" width="70" height="70">
-<h3>Márcio Rios Kunimura</h3> 
-<h5>RA: 081200041</h5>
-<br />
-<br />
-<img src="/img/rodrigo.png" alt="foto do rod" width="70" height="70">
-<h3>Rodrigo Kawaura Montemor </h3> 
-<h5>RA: 081190012</h5>
-<br />
-<br />
-    </body>
+    <header>
+        <h1>@ViewData["Title"]</h1>
+    </header>
+
+    <main>
+        <h2>Desenvolvedores</h2>
+
+        <img src="/img/gustavo.jpg" width="70" height="70">
+        <p>Gustavo Pepinelli Salgado</p>
+        <p>RA: 081190006</p>
+        <br />
+        <br />
+        <img src="/img/marcio.png" width="70" height="70">
+        <p>Márcio Rios Kunimura</p>
+        <p>RA: 081200041</p>
+        <br />
+        <br />
+        <img src="/img/rodrigo.png" alt="foto do rod" width="70" height="70">
+        <p>Rodrigo Kawaura Montemor </p>
+        <p>RA: 081190012</p>
+        <br />
+        <br />
+    </main>
+</body>
