--- a/N2B1_CadCurriculos/Views/Curriculo/Index.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Index.cshtml
@@ -2,12 +2,14 @@
     ViewData["Title"] = "Home Page";
 }
 <body>
-<header>
-    <nav>
-        <ul>
-            <li><a asp-area="" asp-controller="Curriculo" asp-action="Sobre">Sobre</a></li>
-            <li><a asp-area="" asp-controller="Curriculo" asp-action="Cadastro">Cadastrar Currículo</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <nav>
+            <ul>
+                <li><a asp-area="" asp-controller="Curriculo" asp-action="Sobre">Sobre</a></li>
+                <li><a asp-area="" asp-controller="Curriculo" asp-action="Cadastro">Cadastrar</a></li>
+                <li><a asp-area="" asp-controller="Curriculo" asp-action="Listagem">Listagem</a></li>
+                <li><a asp-area="" asp-controller="Curriculo" asp-action="Impressao">Impressão</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
