Mascara para cpf  e apenas número, js puro

--- a/N2B1_CadCurriculos/Views/Curriculo/Cadastro.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Cadastro.cshtml
@@ -27,16 +27,16 @@
                     <input type="text" Name="" value="" />
                     <br>
                     <label>CPF</label>
-                    <input type="text" Name="" value="" placeholder="000.000.000-00" />
+                    <input type="text" Name="cpf" id="cpf" value="" onkeypress="InputNumber(event)" placeholder="000.000.000-00" />
                     <br>
                     <label>Telefone</label>
-                    <input type="tel" Name="" value="" placeholder="(DD) 0000-0000" />
+                    <input type="tel" Name="" value="" onkeypress="InputNumber(event)" placeholder="(00) 0000-0000" />
                     <br>
                     <label>E-mail</label>
                     <input type="email" Name="" value="" />
                     <br>
                     <label>Cargo</label>
-                    <input type="cargo" Name="" value="" />
+                    <input type="text" Name="" value="" />
 
                 </div>
             </div>
