Troquei o type das datas

--- a/N2B1_CadCurriculos/Views/Curriculo/Cadastro.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Cadastro.cshtml
@@ -99,7 +99,7 @@
                     <label>Completo</label>
                     <br>
                     <label>Mês/Ano de Conclusão</label>
-                    <input type="text" Name="" value="" placeholder="MM/AAAA" />
+                    <input type="month" Name="" value="" />
 
                     <div>
                         <label>Período de aula</label>
@@ -132,10 +132,10 @@
                 <input type="text" Name="" value="" />
                 <br>
                 <label>Início</label>
-                <input type="text" name="" value="" placeholder="MM/AAAA" />
+                <input type="month" name="" value="" />
                 <br>
                 <label>Término</label>
-                <input type="text" name="" value="" placeholder="MM/AAAA" />
+                <input type="month" name="" value="" />
                 <br>
                 <div>
                     <label>Ocupaçoes na Empresa</label>
