Type para datas

--- a/N2B1_CadCurriculos/Views/Curriculo/Cadastro.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Cadastro.cshtml
@@ -100,7 +100,7 @@
                     </select>
                     <br>
                     <label>Mês/Ano de Conclusão</label>
-                    <input type="text" Name="" value="" placeholder="MM/AAAA" required />
+                    <input type="month" Name="" value="" required />
 
                     <div>
                         <label>Período de aula</label>
@@ -134,10 +134,10 @@
                 <input type="text" Name="" value="" required />
                 <br>
                 <label>Início</label>
-                <input type="text" name="" value="" placeholder="MM/AAAA" required />
+                <input type="month" name="" value="" required />
                 <br>
                 <label>Término</label>
-                <input type="text" name="" value="" placeholder="MM/AAAA" required />
+                <input type="month" name="" value="" required />
                 <br>
                 <div>
                     <label>Ocupaçoes na Empresa</label>
