Mudei o input do endereço para readonly

--- a/N2B1_CadCurriculos/Views/Curriculo/Cadastro.cshtml
+++ b/N2B1_CadCurriculos/Views/Curriculo/Cadastro.cshtml
@@ -49,16 +49,16 @@
                     <input id="cep" type="text" Name="" value="" required placeholder="00000-000" />
                     <br>
                     <label>Estado</label>
-                    <input id="uf" type="text" Name="" value="" disabled />
+                    <input id="uf" type="text" Name="" value="" readonly />
                     <br>
                     <label>Cidade</label>
-                    <input id="cidade" type="text" Name="" value="" disabled />
+                    <input id="cidade" type="text" Name="" value="" readonly />
                     <br>
                     <label>Bairro</label>
-                    <input id="bairro" type="text" Name="" value="" disabled />
+                    <input id="bairro" type="text" Name="" value="" readonly />
                     <br>
                     <label>Endereço</label>
-                    <input id="rua" type="text" Name="" value="" disabled />
+                    <input id="rua" type="text" Name="" value="" readonly />
                     <br />
                     <label>Número</label>
                     <input id="numero" type="text" Name="" value="" />
